// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots Subheading: 0 1`] = `
<h3
  className="typography_3-0-1-27"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 1 1`] = `
<h1
  className="typography_3-0-1-42"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 2 1`] = `
<h1
  className="typography_3-0-1-57"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 3 1`] = `
<h2
  className="typography_4-0-1-73"
  data-sketch-symbol="Subheading 2"
>
  Subheading test string
</h2>
`;

exports[`generate snapshots Subheading: 4 1`] = `
<h3
  className="typography_5-0-1-89"
  data-sketch-symbol="Subheading 3"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 5 1`] = `
<h4
  className="typography_6-0-1-105"
  data-sketch-symbol="Subheading 4"
>
  Subheading test string
</h4>
`;

exports[`generate snapshots Subheading: 6 1`] = `
<h5
  className="typography_7-0-1-121"
  data-sketch-symbol="Subheading 5"
>
  Subheading test string
</h5>
`;

exports[`generate snapshots Subheading: 7 1`] = `
<h6
  className="typography_8-0-1-137"
  data-sketch-symbol="Subheading 6"
>
  Subheading test string
</h6>
`;
